<resources>

	<!-- Std App Strings -->
	<string name="app_name">ABI Bierpass</string>
	<string name="nav_header_title">Willkommen</string>
	<string name="nav_header_subtitle">der digitale Weg zum Bier</string>
	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>

	<!-- Menüpunkte und Überschriften von Fragmente -->
	<string name="menu_home">Home</string>
	<string name="menu_acc">Account</string>
	<string name="menu_acc_login">Anmelden</string>
	<string name="menu_acc_register">Registrieren</string>
	<string name="menu_acc_admin">Admin Bereich</string>
	<string name="menu_transactions">Transaktionen</string>
	<string name="menu_orderbeer">Bier bestellen</string>
	<string name="menu_acc_profile">Profil</string>
	<string name="menu_acc_logout">Abmelden</string>
	<string name="menu_help">Hilfe</string>
	<string name="menu_help_register">Registieren</string>
	<string name="menu_help_buy">Kaufen</string>
	<string name="menu_help_pay">Bezahlen</string>

	<string name="menu_exit">App beenden</string>
	<string name="menu_about">Über</string>

	<!-- Jede Art von Textfelder -->
	<string name="txt_login">Anmelden</string>
	<string name="txt_register">Registrieren</string>
	<string name="txt_mail">E-Mail Adresse</string>
	<string name="txt_mail2">E-Mail Adresse wiederholen</string>
	<string name="txt_password">Passwort</string>
	<string name="txt_password2">Passwort wiederholen</string>
	<string name="txt_lname">Nachname</string>
	<string name="txt_fname">Vorname</string>
	<string name="txt_vulgo">Vulgo</string>
	<string name="txt_resetPassword">Passwort vergessen?</string>
	<string name="txt_toRegister">Jetzt registrieren</string>

	<string name="txt_profile">Profil</string>
	<string name="txt_changePW">Passwort ändern</string>
	<string name="txt_changeMail">E-Mail Adresse ändern</string>
	<string name="txt_payId">Benutzer ID</string>
	<string name="txt_permission">APP Berechtigung</string>
	<string name="txt_newMail">Neue E-Mail Adresse</string>
	<string name="txt_coins">Bier Coins</string>
	<string name="txt_notification">Benachrichtigung</string>
	<string name="txt_changeTheme">Darkthemet</string>

	<!-- Text im Code - Known Json.put (acton), Alertdialog, Toasts, usw -->
	<string name="code_json_action_getuserinformation">getuserinformation</string>
	<string name="code_json_input_geteverything">geteverything</string>
	<string name="code_alertdia_msg_error">Ups Bier verschüttet. Fehler können passieren.\n\nFehlercode: </string>


	<!-- TODO: Remove or change this placeholder text -->
	<string name="hello_blank_fragment">Hello blank fragment</string>
	<string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>


</resources>
