<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
	  xmlns:tools="http://schemas.android.com/tools"
	  tools:showIn="navigation_view">

	<group android:checkableBehavior="single">
		<item
				android:id="@+id/nav_home"
				android:icon="@drawable/ic_home"
				android:title="@string/menu_home"/>
		<item
				android:id="@+id/nav_acc"
				android:title="@string/menu_acc">
			<menu>
				<item
						android:id="@+id/nav_acc_login"
						android:icon="@drawable/ic_login"
						android:checkable="true"
						android:title="@string/menu_acc_login"/>
				<item
						android:id="@+id/nav_acc_register"
						android:icon="@drawable/ic_register"
						android:checkable="true"
						android:title="@string/menu_acc_register"/>
				<item
						android:id="@+id/nav_acc_profile"
						android:icon="@drawable/ic_profile"
						android:checkable="true"
						android:enabled="false"
						android:visible="false"
						android:title="@string/menu_acc_profile"/>
				<item
						android:id="@+id/nav_acc_logout"
						android:checkable="true"
						android:enabled="false"
						android:visible="false"
						android:title="@string/menu_acc_logout"/>

			</menu>
		</item>

		<item
				android:id="@+id/nav_help"
				android:title="@string/menu_help">
			<menu>
				<item
						android:id="@+id/nav_help_register"
						android:icon="@drawable/ic_help"
						android:checkable="true"
						android:title="@string/menu_help_register"/>


				<item
						android:id="@+id/nav_help_buy"
						android:icon="@drawable/ic_help"
						android:checkable="true"
						android:title="@string/menu_help_buy"/>


				<item
						android:id="@+id/nav_help_pay"
						android:icon="@drawable/ic_help"
						android:checkable="true"
						android:title="@string/menu_help_pay"/>


			</menu>
		</item>

	</group>


</menu>
