<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="horizontal"
		android:weightSum="100">

	<TextView
			android:id="@+id/txt_fName"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="20"
			android:text="@string/txt_fname" />

	<TextView
			android:id="@+id/txt_lName"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="20"
			android:text="@string/txt_lname" />

	<TextView
			android:id="@+id/txt_vulgo"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="20"
			android:text="@string/txt_vulgo" />

	<TextView
			android:id="@+id/txt_coins"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="20"
			android:text="@string/txt_coins" />

	<TextView
			android:id="@+id/txt_permission"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="20"
			android:text="@string/txt_permission" />
</LinearLayout>